clusters/talos-cluster/ntfy/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ntfy-horus-route
  namespace: ntfy
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - "ntfy.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ntfy
          port: 80
